test_suite/tests/compile_fail/rename_start_with_number.rs
use ronky::Exported;

#[derive(Exported)]
struct Test {
    #[arri(rename = "123invalid")]
    example: u8,
}

fn main() {}
